make price and rating pop a bit more

--- a/algolia-is-example/src/app/search-hit/search-hit.component.html
+++ b/algolia-is-example/src/app/search-hit/search-hit.component.html
@@ -7,7 +7,7 @@
     <br>
     <i><ais-highlight attribute="brand" [hit]="hit"></ais-highlight></i>
     <p>{{ hit.description }}</p>
-    Price:{{hit.price}}
-    Rating: {{hit.rating}}
+    <b>Price:</b> ${{hit.price}}
+    <b>Rating:</b> {{hit.rating}}/6
   </div>
 </div>
